add_executable(date_client date_client.cpp)
add_executable(date_server date_server.cpp)
add_executable(echo_client_buffered echo_client_buffered.cpp)
add_executable(echo_client_udp echo_client_udp.cpp)
add_executable(echo_server_buffered echo_server_buffered.cpp)
add_executable(echo_server echo_server.cpp)
add_executable(echo_server_operators echo_server_operators.cpp)
add_executable(echo_server_udp echo_server_udp.cpp)
add_executable(file_exchange_client file_exchange_client.cpp)
add_executable(file_exchange_server file_exchange_server.cpp)
add_executable(http_sample http_sample.cpp)
add_executable(ip_addr ip_addr.cpp)
add_executable(ip_lookup ip_lookup.cpp)
add_executable(multicast_receiver multicast_receiver.cpp)
add_executable(multicast_sender multicast_sender.cpp)
